Implement checking for cache filed created by plugins
  - Implemented checking for cache files created by plugins.
    This feature is still unfinished but it will be used to
    skip plugins whose output is already stored in a cache file.
  - Implemented various cache handling functions.
  - Rename PLUGIN_PARAMS to PLUGIN_INFO because it's more
    descriptive. PLUGIN_INFO doesn't really even contain parameters
    but it does contain info about the plugin such as it's name etc.
  - Rename some function in cache.c to have a more uniform naming
    convention across the whole file.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,2 @@
- - cache.c - LN: 40 ==> Check for errno values other than ENOENT too and properly exit on error.
-
+- Simplify plugin data access by creating a function for getting the PLUGIN struct
+  of a plugin and removing the individual functions for accessing different data.
