Implement plugin skipping in pipeline.c
  - Implement skipping plugins whose output is already stored in a
    cache file. This feature is still not completely finished but it
    should somewhat work.
  - Implement more cache handling functions in cache.c

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,1 @@
-- Simplify plugin data access by creating a function for getting the PLUGIN struct
-  of a plugin and removing the individual functions for accessing different data.
+- Set the dirty flag on plugin creation.
