Implement commands to the CLI shell
  - Implement a few commands for the CLI shell interface.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,3 @@
-- Implement cache deletion in cache.c
+file.c: 
+    rmdir_recursive():
+      - Check if the directory exists before trying to delete it.
