Completely rewrite the caching system
  - Completely rewrite the caching system to make it easier to use.
  - Implement a new CACHE type for handling caches.
  - Modify other parts of the code to reflect changes in the caching
    system.
  - Small fixes in other parts of code.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
-job.c
-    - Make job_print() print the status flag of the JOB instance too.
-
+ - Use plugin ID for the plugin identifier generation.
+ - Implement some sort of cache size limiting so that cached files
+   don't take insane amounts of space.
